[tool.poetry]
name = "vecpedal"
version = "0.1.0"
description = ""
authors = ["Vitor Centeio <vitor.centeio@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
evdev = "^1.4.0"
PyAutoGUI = "^0.9.53"

[tool.poetry.dev-dependencies]
commitizen = "^2.21.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
